--- a/css/slutprojekt.css
+++ b/css/slutprojekt.css
@@ -1,20 +1,573 @@
-img {
+.header {
+font-size: 50px;
+display: block;
+text-align: center;
+color: rgb(255, 255, 255);
+font-variant: small-caps;
+font-family: 'Bebas Neue', cursive;
+font-family: 'Cinzel', serif;
+max-width: 100%;
+margin-left: auto;
+margin-right: auto;
+text-shadow: 5px 5px 5px black;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .header{
+    font-size: 25px;
+    max-width: 100%;
+   }
+  }
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+.header{
+  font-size: 30px;
+  max-width: 100%;
+ }
+}
+
+.topnav {
+  overflow: hidden;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 15px;
+  font-family:'Cinzel', serif;
+}
+
+.topnav a:hover {
+  text-shadow: none;
+  color: rgb(170, 143, 186);
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+.topnav .icon {
+  display: none;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: left;
+    display: block;
+    max-width: 100%;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: left;
+    display: block;
+    max-width: 100%;
+  }
+}
+
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: left;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+   }
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+     }
+    }
+
+  * {box-sizing:border-box}
+  .slideshow-container {
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+  }
+  .mySlides {
+    display: none;
+  }
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+  .skip {
+    font-size: 15px;
+    color: black;
+    text-decoration: none;
+    float: right;
+    font-family: 'Times New Roman', Times, serif;
+    top: 0;
+    margin-left: 10px;
+  }
+
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .skip {
+     display: none;
+    }
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .skip {
+     display: none;
+    }
+  }
+
+
+body {
+  background-image: url("https://bloody-disgusting.com/wp-content/uploads/2020/08/left4dead2.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
+
+.homeimg{
+  max-width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 600px){
+  .homeimg {
+    max-width: 100%;
+  }
+}
+  h1 {
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
+    font-family: 'Cinzel', serif;
+    top: 0;
+  }
+  @media screen and (max-width: 600px){
+    h1 {
+      font-size: 20px;
+    }
+  }
+  h2 {
+    color: black;
+    font-size: 10px;
+  }
+
+  
+h3 {
+  margin-top: 200px;
+  font-size: 10px;
+  color: white;
+  float: right;
+}
+
+h4 {
+    margin-top: 200px;
+    font-size: 10px;
+    color: white;
+    float: right;  
+}
+
+h5 {
+  margin-top: 200px;
+  font-size: 10px;
+  color: white;
+  float: right;
+}
+
+h6 {
+  margin-top: 200px;
+  font-size: 10px;
+  color: white;
+  float: right;
+}
+  p {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 100px;
+  margin-top: 10px;
+  margin: 50px;
+  }
+  @media screen and (max-width: 600px){
+    p {
+      font-size: 10px;
+    }
+  }
+
+.thegames {
+  display: flex;
+  justify-content: space-around;
+}
+
+.b4b {
+  width: 200px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .b4b {
+  width: 100px;
+  height: 150px;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .b4b {
+  width: 150px;
+  height: 250px;
+  }
+}
+
+.dl {
+width: 200px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .dl {
+  width: 100px;
+  height: 150px;
+  }
+}
+
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .dl {
+    max-width: 150px;
+    height: 250px;
+    }
+  }
+
+.tank {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  height: 320px;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .tank {
+ height: 100px;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .tank {
+  height: 200px;
+  }
+}
+
+.common {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  height: 320px;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .common {
+ height: 100px;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .common {
+  height: 200px;
+  }
+}
+
+ .hunter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  height: 320px;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .hunter {
+ height: 100px;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .hunter {
+  height: 200px;
+  }
+}
+
+  .firsttwo {
+    display: flex;
+    justify-content: space-evenly;
+    }
+  
+    .secondtwo {
+      margin-top: 50px;
+      display: flex;
+      justify-content: space-evenly;
+    }
+
+.elliscard {
+  width: 250px;
+  height: 250px;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .elliscard {
+   width: 100px;
+   height: 100px;
+    }
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .elliscard {
     width: 200px;
     height: 200px;
+    }
+  }
+
+.coachcard {
+  width: 250px;
+  height: 250px;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: Black;}
-    
-li {
-        float: left;
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .coachcard {
+   width: 100px;
+   height: 100px;
     }
-    
-li a {
-        display: block;
-        color: red;
-        text-align: center;
-        text-decoration: none;
+  }
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .coachcard {
+    width: 200px;
+    height: 200px;
     }
+  }
+
+.rochellecard {
+  width: 250px;
+  height: 250px;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .rochellecard {
+   width: 100px;
+   height: 100px;
+    }
+  }
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .rochellecard {
+    width: 200px;
+    height: 200px;
+    }
+  }
+
+.nickcard {
+  width: 250px;
+  height: 250px;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .nickcard {
+   width: 100px;
+   height: 100px;
+    }
+  }
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .nickcard {
+    width: 200px;
+    height: 200px;
+    }
+  }
+
+  .twofirst {
+    display: flex;
+    justify-content: space-evenly;
+    }
+  
+    .twosecond {
+      margin-top: 50px;
+      display: flex;
+      justify-content: space-evenly;
+    }
+
+  .huntercard {
+    width: 250px;
+    height: 250px;
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .huntercard {
+     width: 100px;
+     height: 100px;
+      }
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+      .huntercard {
+      width: 200px;
+      height: 200px;
+      }
+    }
+
+  .smokercard {
+    width: 250px;
+    height: 250px;
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .smokercard {
+     width: 100px;
+     height: 100px;
+      }
+    }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+      .smokercard {
+      width: 200px;
+      height: 200px;
+      }
+    }
+
+  .tankcard {
+    width: 250px;
+    height: 250px;
+  }
+  
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .tankcard {
+     width: 100px;
+     height: 100px;
+      }
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+      .tankcard {
+      width: 200px;
+      height: 200px;
+      }
+    }
+  .witchcard {
+    width: 250px;
+    height: 250px;
+  }
+  
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .witchcard {
+     width: 100px;
+     height: 100px;
+      }
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+      .witchcard {
+      width: 200px;
+      height: 200px;
+      }
+    }
+
+.nm {
+  height: 500px;
+  width: 400px;
+  margin-left: 5%;
+  float: left;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .nm {
+    width: 300px;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .nm {
+    width: 200px;
+    height: 300px;
+    margin-left: 10%;
+    }
+  }
+
+.sf {
+  height: 500px;
+  width: 400px;
+  margin-left: 5%;
+  float: left;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .sf {
+    width: 300px;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .sf {
+    width: 200px;
+    height: 300px;
+    margin-left: 10%;
+    }
+  }
+
+.tp {
+  height: 500px;
+  width: 400px;
+  margin-left: 5%;
+  float: left;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .tp {
+    width: 300px;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .tp {
+    width: 200px;
+    height: 300px;
+    margin-left: 10%;
+    }
+  }
+
+.dc {
+  height: 500px;
+  width: 400px;
+  margin-left: 5%;
+  float: left;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .dc {
+    display: flex;
+    align-self: center;
+    width: 300px;
+    height: 500px;
+    }
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .dc {
+    width: 200px;
+    height: 300px;
+   margin-left: 10%;
+    }
+  }
+.textnext {
+text-align: end;
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .textnext {
+  text-align: end;
+    }
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .textnext {
+    text-align: end;
+    }
+  }
+
